force-app/main/default/objects/Help_Desk__c/Help_Desk__c.object-meta.xml
<CustomObject>
    <label>Help Desk</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Ticket</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Desk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>