force-app/main/default/objects/Help_Desk__c/fields/Additional_Note__c.field-meta.xml
<CustomField>
    <fullName>Additional_Note__c</fullName>
    <label>Additional Note</label>
    <type>TextArea</type>
</CustomField>