force-app/main/default/objects/Help_Desk__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <label>Additional Note</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>