force-app/main/default/objects/Help_Desk__c/fields/Additional_Notes_Other__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_Other__c</fullName>
    <label>Additional Notes</label>
    <type>TextArea</type>
</CustomField>