force-app/main/default/objects/Help_Desk__c/fields/Additional_PSO_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_PSO_Notes__c</fullName>
    <label>Additional PSO Notes</label>
    <type>TextArea</type>
</CustomField>