force-app/main/default/objects/Help_Desk__c/fields/All_Notes__c.field-meta.xml
<CustomField>
    <fullName>All_Notes__c</fullName>
    <label>All Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>