force-app/main/default/objects/Help_Desk__c/fields/Approved_for_Development__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved for Development?</label>
    <type>Checkbox</type>
</CustomField>