force-app/main/default/objects/Help_Desk__c/fields/Build_NAV_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Build_NAV_Project_Number__c</fullName>
    <inlineHelpText>If not populated the phase won&apos;t be instructed</inlineHelpText>
    <label>Build NAV Project Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>