force-app/main/default/objects/Help_Desk__c/fields/Build_PM__c.field-meta.xml
<CustomField>
    <fullName>Build_PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build PM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Help_Desk3</relationshipName>
    <type>Lookup</type>
</CustomField>