force-app/main/default/objects/Help_Desk__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please select a Business Unit</fullName>
                <default>true</default>
                <label>Please select an Option</label>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>HSSEQ</fullName>
            </value>
            <value>
                <fullName>Stores &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>External Contractor</fullName>
            </value>
            <value>
                <fullName>Fixed Line</fullName>
            </value>
            <value>
                <fullName>SPEN FSL - O&amp;M</fullName>
            </value>
            <value>
                <fullName>Financial Force</fullName>
                <isActive>false</isActive>
                <label>Financial Force</label>
            </value>
            <value>
                <fullName>HR</fullName>
                <isActive>false</isActive>
                <label>HR</label>
            </value>
            <value>
                <fullName>ICS Group</fullName>
                <isActive>false</isActive>
                <label>ICS Group</label>
            </value>
            <value>
                <fullName>Not Specific to Any BU</fullName>
                <isActive>false</isActive>
                <label>Not Specific to Any BU</label>
            </value>
            <value>
                <fullName>Rigging</fullName>
                <isActive>false</isActive>
                <label>Rigging</label>
            </value>
            <value>
                <fullName>SBU1</fullName>
                <isActive>false</isActive>
                <label>SBU1</label>
            </value>
            <value>
                <fullName>SBU2</fullName>
                <isActive>false</isActive>
                <label>SBU2</label>
            </value>
            <value>
                <fullName>SBU3</fullName>
                <isActive>false</isActive>
                <label>SBU3</label>
            </value>
            <value>
                <fullName>SBU4</fullName>
                <isActive>false</isActive>
                <label>SBU4</label>
            </value>
            <value>
                <fullName>SBU5</fullName>
                <isActive>false</isActive>
                <label>SBU5</label>
            </value>
            <value>
                <fullName>SBU6</fullName>
                <isActive>false</isActive>
                <label>SBU6</label>
            </value>
            <value>
                <fullName>SBU7</fullName>
                <isActive>false</isActive>
                <label>SBU7</label>
            </value>
            <value>
                <fullName>SBU8</fullName>
                <isActive>false</isActive>
                <label>SBU8</label>
            </value>
            <value>
                <fullName>Site Tracker</fullName>
                <isActive>false</isActive>
                <label>Sitetracker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>