force-app/main/default/objects/Help_Desk__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient Information</fullName>
            </value>
            <value>
                <fullName>User Error</fullName>
            </value>
            <value>
                <fullName>Wrong Template Used</fullName>
            </value>
            <value>
                <fullName>Incorrect Information</fullName>
            </value>
            <value>
                <fullName>Incorrect Ticket Type</fullName>
            </value>
            <value>
                <fullName>Approval Not Received</fullName>
            </value>
            <value>
                <fullName>Cancelled by Originator</fullName>
            </value>
            <value>
                <fullName>Duplicate Request</fullName>
            </value>
            <value>
                <fullName>Not Beacon Compliant</fullName>
            </value>
            <value>
                <fullName>System Restrictions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>