force-app/main/default/objects/Help_Desk__c/fields/Chatter_Comment__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chatter Comment</label>
    <type>Checkbox</type>
</CustomField>