force-app/main/default/objects/Help_Desk__c/fields/Client_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Ticket_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Ticket ID</label>
    <type>Text</type>
</CustomField>