force-app/main/default/objects/Help_Desk__c/fields/Consultation_Progress__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Progress__c</fullName>
    <label>Consultation Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Awaiting Feedback</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>