force-app/main/default/objects/Help_Desk__c/fields/Content_Documents__c.field-meta.xml
<CustomField>
    <fullName>Content_Documents__c</fullName>
    <label>Content Documents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>