force-app/main/default/objects/Help_Desk__c/fields/Current_Installation_URL__c.field-meta.xml
<CustomField>
    <fullName>Current_Installation_URL__c</fullName>
    <inlineHelpText>Installation which the new request will be linked to.</inlineHelpText>
    <label>Current Installation URL</label>
    <type>Url</type>
</CustomField>