force-app/main/default/objects/Help_Desk__c/fields/Date_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_On_Hold__c</fullName>
    <label>Date On Hold</label>
    <type>Date</type>
</CustomField>