force-app/main/default/objects/Help_Desk__c/fields/Date_Requested_Further_Information__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested_Further_Information__c</fullName>
    <label>Date Requested Further Information</label>
    <type>Date</type>
</CustomField>