force-app/main/default/objects/Help_Desk__c/fields/Days_Since_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Escalation__c</fullName>
    <formula>TODAY()  -  Escalated_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Escalation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>