force-app/main/default/objects/Help_Desk__c/fields/Days_Since_Escalation_Concatenation__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Escalation_Concatenation__c</fullName>
    <formula>TEXT(Days_Since_Escalation__c) &amp; &quot; &quot; &amp; &quot;Days&quot; &amp; &quot; &quot; &amp; &quot;Since&quot; &amp; &quot; &quot; &amp; &quot;Escalation&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Escalation Concatenation</label>
    <type>Text</type>
</CustomField>