force-app/main/default/objects/Help_Desk__c/fields/Description_AI__c.field-meta.xml
<CustomField>
    <fullName>Description_AI__c</fullName>
    <label>Description AI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>