force-app/main/default/objects/Help_Desk__c/fields/Design_PM__c.field-meta.xml
<CustomField>
    <fullName>Design_PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design PM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Help_Desk4</relationshipName>
    <type>Lookup</type>
</CustomField>