force-app/main/default/objects/Help_Desk__c/fields/Dev_Comments__c.field-meta.xml
<CustomField>
    <fullName>Dev_Comments__c</fullName>
    <label>Developer Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>