force-app/main/default/objects/Help_Desk__c/fields/Docs_to_Upload__c.field-meta.xml
<CustomField>
    <fullName>Docs_to_Upload__c</fullName>
    <label>Docs to Upload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>