force-app/main/default/objects/Help_Desk__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <formula>Test__r.Epic__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Epic</label>
    <type>Text</type>
</CustomField>