force-app/main/default/objects/Help_Desk__c/fields/Escalate__c.field-meta.xml
<CustomField>
    <fullName>Escalate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tasked to CloudJungle</label>
    <type>Checkbox</type>
</CustomField>