force-app/main/default/objects/Help_Desk__c/fields/Escalated_By__c.field-meta.xml
<CustomField>
    <fullName>Escalated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tasked to CloudJungle By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Help_Desk1</relationshipName>
    <type>Lookup</type>
</CustomField>