force-app/main/default/objects/Help_Desk__c/fields/Escalated_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Date__c</fullName>
    <label>Tasked to CloudJungle Date</label>
    <type>Date</type>
</CustomField>