force-app/main/default/objects/Help_Desk__c/fields/Escalated_Date_Short__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Date_Short__c</fullName>
    <formula>TEXT(YEAR(Escalated_Date__c ))&amp;&quot;-&quot;&amp; TEXT(MONTH( Escalated_Date__c )) &amp; &quot;-&quot; &amp;  TEXT(DAY( Escalated_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tasked to CloudJungle Date Short</label>
    <type>Text</type>
</CustomField>