force-app/main/default/objects/Help_Desk__c/fields/Escalation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Comments__c</fullName>
    <label>Tasked to CloudJungle Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>