force-app/main/default/objects/Help_Desk__c/fields/Expected_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Expected_Behaviour__c</fullName>
    <label>Expected Behaviour</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>