force-app/main/default/objects/Help_Desk__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feature</label>
    <referenceTo>Feature__c</referenceTo>
    <relationshipLabel>Help Desk</relationshipLabel>
    <relationshipName>Help_Desk</relationshipName>
    <type>Lookup</type>
</CustomField>