force-app/main/default/objects/Help_Desk__c/fields/Forecast_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Completion_Date__c</fullName>
    <label>Forecast Completion Date</label>
    <type>Date</type>
</CustomField>