force-app/main/default/objects/Help_Desk__c/fields/Help_Text_del__c.field-meta.xml
<CustomField>
    <fullName>Help_Text_del__c</fullName>
    <defaultValue>&quot;If you have any screenshots or files to attach to the ticket please go to the ticket once it has been created and attach them to the Files list.&quot;</defaultValue>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>