force-app/main/default/objects/Help_Desk__c/fields/Idea_New_Functionality__c.field-meta.xml
<CustomField>
    <fullName>Idea_New_Functionality__c</fullName>
    <label>Idea/New Functionality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>