force-app/main/default/objects/Help_Desk__c/fields/Integration_description__c.field-meta.xml
<CustomField>
    <fullName>Integration_description__c</fullName>
    <label>Integration description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>