force-app/main/default/objects/Help_Desk__c/fields/Jira_Chatter_Post__c.field-meta.xml
<CustomField>
    <fullName>Jira_Chatter_Post__c</fullName>
    <label>Jira Chatter Post</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>