force-app/main/default/objects/Help_Desk__c/fields/Jira_Epic__c.field-meta.xml
<CustomField>
    <fullName>Jira_Epic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jira Epic?</label>
    <type>Checkbox</type>
</CustomField>