force-app/main/default/objects/Help_Desk__c/fields/Jira_Id__c.field-meta.xml
<CustomField>
    <fullName>Jira_Id__c</fullName>
    <label>Jira Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>