force-app/main/default/objects/Help_Desk__c/fields/Last_Checked__c.field-meta.xml
<CustomField>
    <fullName>Last_Checked__c</fullName>
    <inlineHelpText>By PSO</inlineHelpText>
    <label>Last Checked</label>
    <type>DateTime</type>
</CustomField>