force-app/main/default/objects/Help_Desk__c/fields/Last_Updated_by_CJ__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_by_CJ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Updated by CJ</label>
    <type>Checkbox</type>
</CustomField>