force-app/main/default/objects/Help_Desk__c/fields/Most_Recent_Comment__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Comment__c</fullName>
    <label>Most Recent Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>