force-app/main/default/objects/Help_Desk__c/fields/Most_Recent_Note__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Note__c</fullName>
    <label>Most Recent Note</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>