force-app/main/default/objects/Help_Desk__c/fields/My_Ticket__c.field-meta.xml
<CustomField>
    <fullName>My_Ticket__c</fullName>
    <formula>IF( OR( $User.Id = CreatedById  , $User.Id =  Assigned_To__r.Id ), TRUE, FALSE)</formula>
    <label>My Ticket</label>
    <type>Checkbox</type>
</CustomField>