force-app/main/default/objects/Help_Desk__c/fields/Name_Of_Owner__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Owner__c</fullName>
    <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Of Owner</label>
    <type>Text</type>
</CustomField>