force-app/main/default/objects/Help_Desk__c/fields/New_Information_Added__c.field-meta.xml
<CustomField>
    <fullName>New_Information_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Information Added?</label>
    <type>Checkbox</type>
</CustomField>