force-app/main/default/objects/Help_Desk__c/fields/Number_of_Installations_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Installations_Required__c</fullName>
    <label>Number of Installations Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>