force-app/main/default/objects/Help_Desk__c/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <formula>CASESAFEID($Organization.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org Id</label>
    <type>Text</type>
</CustomField>