force-app/main/default/objects/Help_Desk__c/fields/Outcome_of_Consultation__c.field-meta.xml
<CustomField>
    <fullName>Outcome_of_Consultation__c</fullName>
    <label>Outcome of Consultation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>