force-app/main/default/objects/Help_Desk__c/fields/Owner_Change_Justification__c.field-meta.xml
<CustomField>
    <fullName>Owner_Change_Justification__c</fullName>
    <inlineHelpText>This field must be populated before attempting to transfer ownership of the ticket.</inlineHelpText>
    <label>Owner Change Justification</label>
    <type>TextArea</type>
</CustomField>