force-app/main/default/objects/Help_Desk__c/fields/Parent_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Ticket</label>
    <referenceTo>Help_Desk__c</referenceTo>
    <relationshipLabel>Related Tickets</relationshipLabel>
    <relationshipName>Parent_Ticket</relationshipName>
    <type>Lookup</type>
</CustomField>