force-app/main/default/objects/Help_Desk__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>1. Highest Priority - Immediate Action Required
2.
3.
4. 
5. Low Priority, known issue, little business impact</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <color>#FF0000</color>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <color>#CC0000</color>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <color>#FF6600</color>
                <default>true</default>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <color>#FFCC66</color>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <color>#FFFF66</color>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>