force-app/main/default/objects/Help_Desk__c/fields/PSO_Responsible__c.field-meta.xml
<CustomField>
    <fullName>PSO_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSO Member Responsible</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.PSO_Member__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Help_Desk2</relationshipName>
    <type>Lookup</type>
</CustomField>