force-app/main/default/objects/Help_Desk__c/fields/PSO_Ticket_Notes__c.field-meta.xml
<CustomField>
    <fullName>PSO_Ticket_Notes__c</fullName>
    <label>PSO Ticket Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>