force-app/main/default/objects/Help_Desk__c/fields/Purchase_Support_Hours__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Support_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase Support Hours</label>
    <type>Checkbox</type>
</CustomField>