force-app/main/default/objects/Help_Desk__c/fields/Ready_for_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Sprint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Sprint</label>
    <type>Checkbox</type>
</CustomField>