force-app/main/default/objects/Help_Desk__c/fields/Rejected_Blocked_On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Blocked_On_Hold_Reason__c</fullName>
    <label>Rejected/Blocked/On Hold Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>