force-app/main/default/objects/Help_Desk__c/fields/Responses__c.field-meta.xml
<CustomField>
    <fullName>Responses__c</fullName>
    <label>Responses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>