force-app/main/default/objects/Help_Desk__c/fields/Salesforce_Support_Required__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Support_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Support Required?</label>
    <type>Checkbox</type>
</CustomField>