force-app/main/default/objects/Help_Desk__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Awaiting Response</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Tasked to CloudJungle</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>In Testing</fullName>
            </value>
            <value>
                <fullName>Awaiting Deployment</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Backlog</fullName>
                <isActive>false</isActive>
                <label>Backlog</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <isActive>false</isActive>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>Escalated</fullName>
                <isActive>false</isActive>
                <label>Escalated</label>
            </value>
            <value>
                <fullName>Ready to Start</fullName>
                <isActive>false</isActive>
                <label>Ready to Start</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>To be Reviewed</fullName>
                <isActive>false</isActive>
                <label>To be Reviewed</label>
            </value>
            <value>
                <fullName>User Testing</fullName>
                <isActive>false</isActive>
                <label>User Testing</label>
            </value>
            <value>
                <fullName>Work In Progress</fullName>
                <isActive>false</isActive>
                <label>Work In Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>