force-app/main/default/objects/Help_Desk__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test</label>
    <referenceTo>Test__c</referenceTo>
    <relationshipLabel>Help Desk</relationshipLabel>
    <relationshipName>Help_Desk</relationshipName>
    <type>Lookup</type>
</CustomField>