force-app/main/default/objects/Help_Desk__c/fields/Testing_Team__c.field-meta.xml
<CustomField>
    <fullName>Testing_Team__c</fullName>
    <formula>if( Test__c &lt;&gt;&quot;&quot;,text(Test__r.Project__c ),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Testing Team</label>
    <type>Text</type>
</CustomField>