force-app/main/default/objects/Help_Desk__c/fields/Ticket_URL__c.field-meta.xml
<CustomField>
    <fullName>Ticket_URL__c</fullName>
    <formula>&quot;https://whp.lightning.force.com/lightning/r/Help_Desk__c/&quot; &amp; Id &amp; &quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket URL</label>
    <type>Text</type>
</CustomField>