force-app/main/default/objects/Help_Desk__c/fields/Training_Required__c.field-meta.xml
<CustomField>
    <fullName>Training_Required__c</fullName>
    <label>Training Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training for Acquisition</fullName>
            </value>
            <value>
                <fullName>Training for Design</fullName>
            </value>
            <value>
                <fullName>Training for Build</fullName>
            </value>
            <value>
                <fullName>Training for Commercials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>