force-app/main/default/objects/Help_Desk__c/fields/Trello_ID__c.field-meta.xml
<CustomField>
    <fullName>Trello_ID__c</fullName>
    <description>Stores ID of Trello card for integration</description>
    <label>Trello ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>